--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8"
-;*{
-   margin: 0;
-   padding: 0;
+* {
+   margin: 0px;
+   padding: 0px;
    box-sizing: border-box;
  }
 
@@ -35,4 +35,13 @@
   height: 627px;
   width: 311px;
   background: url('../imagens/frame-iphone.png') no-repeat ;
+ }
+
+ iframe#tela{
+  position: relative;
+  top: 80px;
+  left: 22px;
+  height: 471px;
+  width: 267px;
+  background-size: cover;
  }
